--- a/Farmer/index.html
+++ b/Farmer/index.html
@@ -71,7 +71,7 @@
                         <div class="navbar-nav ms-auto mx-xl-auto p-0">
                             <a href="index.html" class="nav-item nav-link active text-secondary">Home</a>
                             <a href="http://localhost:8080/php%20codes/Krishimitra%20Ai/Forum/index.php" class="nav-item nav-link">Forum</a>
-                            <a href="http://localhost:8080/php%20codes/Krishimitra%20Ai/community/" class="nav-item nav-link">Community</a>
+                            <a href="http://localhost:8080/php%20codes/Krishimitra%20Ai/community/register.php" class="nav-item nav-link">Community</a>
                             <a href="http://localhost:8080/php%20codes/Krishimitra%20Ai/Agriculture%20Equpment%20Rental/" class="nav-item nav-link">Rental</a>
                             <div class="nav-item dropdown">
                                 <a href="Ai_Assistant.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Ai Assistant</a>
@@ -263,7 +263,7 @@
                                     <img src="../img/communitylogo.png" alt="Web Design" class="img-fluid mb-4" style="width: 100px; height: 100px; object-fit: cover; border-radius: 10px;">
                                     <h4 class="mb-3">Community</h4>
                                     <p class="mb-4">A Social Media Platform for Farmers</p>
-                                    <a href="http://localhost:8080/php%20codes/Krishimitra%20Ai/community" class="btn btn-secondary text-white px-5 py-3 rounded-pill">join</a>
+                                    <a href="http://localhost:8080/php%20codes/Krishimitra%20Ai/community/register.php" class="btn btn-secondary text-white px-5 py-3 rounded-pill">join</a>
                                 </div>
                             </div>
                         </div>
