--- a/Farmer/index.html
+++ b/Farmer/index.html
@@ -238,7 +238,7 @@
                                         
                                         <h4 class="mb-3"> Crop Disease Detection</h4>
                                         <p class="mb-4">AI-Powered Crop Health Check</p>
-                                        <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Join</a>
+                                        <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Coming Soon</a>
                                     </div>
                                 </div>
                             </div>
