--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                                 <i class="fas fa-star text-primary"></i>
                                 <i class="fas fa-star text-primary"></i>
                             </div>
-                            <p class="fs-5 m-0 pt-3">पहले खाद और बीज के दाम बहुत ज्यादा थे, लेकिन Krishimitra AI पर जुड़ने के बाद मुझे सस्ते और अच्छे विकल्प मिले। अब खेती की लागत 30% कम हो गई है। धन्यवाद!</p>
+                            <p class="fs-5 m-0 pt-3">मुझे मेरी धान की फसल में कीटों की समस्या हो रही थी। मैंने KrishiMitra AI के एक्सपर्ट फोरम पर सवाल पूछा – ‘धान की फसल में कीटों से बचाव के लिए कौन सी दवा सबसे अच्छी रहेगी?’ कुछ ही मिनटों में एक कृषि विशेषज्ञ ने विस्तार से जवाब दिया, साथ ही AI चैटबॉट ने भी सटीक जानकारी दी। मैंने बताई गई दवा का उपयोग किया, और मेरी फसल को बचाने में मदद मिली। पहली बार ऐसा लगा कि कोई मेरी परेशानियों को समझता है और तुरंत समाधान देता है!</p>
                         </div>
                     </div>
                     <div class="testimonial-item rounded bg-light">
@@ -792,7 +792,7 @@
                                 <i class="fas fa-star text-primary"></i>
                                 <i class="fas fa-star text-primary"></i>
                             </div>
-                            <p class="fs-5 m-0 pt-3">मौसम की मार से हर साल नुकसान होता था। लेकिन Krishimitra AI के मौसम अलर्ट और स्मार्ट खेती टिप्स से अब नुकसान कम और उत्पादन ज्यादा हो रहा है। ये प्लेटफॉर्म कमाल का है!</p>
+                            <p class="fs-5 m-0 pt-3">मेरे पास एक ट्रैक्टर था जो साल में सिर्फ कुछ महीनों के लिए ही काम आता था। बाकी समय यूं ही खड़ा रहता था। मैंने KrishiMitra AI के रेंटल सिस्टम के बारे में सुना और अपने ट्रैक्टर को किराए पर देने के लिए लिस्ट कर दिया। कुछ ही दिनों में मुझे एक किसान का कॉल आया, जिसने एक हफ्ते के लिए ट्रैक्टर बुक किया। इससे मुझे ₹10,000 की कमाई हुई! अब जब भी मेरा ट्रैक्टर खाली रहता है, मैं इसे किराए पर देकर अतिरिक्त आमदनी कमाता हूँ। इससे मेरा खेती का खर्च भी निकल आता है!</p>
                         </div>
                     </div>
                     <div class="testimonial-item rounded bg-light">
@@ -814,7 +814,7 @@
                                 <i class="fas fa-star text-primary"></i>
                                 <i class="fas fa-star text-primary"></i>
                             </div>
-                            <p class="fs-5 m-0 pt-3">पहले जैविक खेती के लिए सही खाद और जानकारी मिलना मुश्किल था। Krishimitra AI से न सिर्फ बेहतरीन ऑर्गेनिक फर्टिलाइज़र मिले, बल्कि एक्सपर्ट्स की मदद से खेती और फायदेमंद हो गई। अल्हमदुलिल्लाह, बहुत अच्छा प्लेटफॉर्म</p>
+                            <p class="fs-5 m-0 pt-3">हर साल मेरी टमाटर की फसल तैयार होती थी, लेकिन बाजार में बिचौलियों के कारण मुझे बहुत कम दाम मिलते थे। इस बार मैंने KrishiMitra AI पर अपना टमाटर सीधे होटल और उपभोक्ताओं को बेचने के लिए लिस्ट किया। पहले दिन ही मुझे एक होटल से बड़ा ऑर्डर मिला, और मैंने टमाटर ₹28 प्रति किलो के हिसाब से बेचा, जबकि बाजार में बिचौलिए सिर्फ ₹12 दे रहे थे। अब मुझे सही दाम भी मिल रहा है और मेरा माल भी तेजी से बिक रहा है। KrishiMitra AI ने मेरी कमाई को दोगुना कर दिया!</p>
                         </div>
                     </div>
                     <div class="testimonial-item rounded bg-light">
@@ -836,7 +836,7 @@
                                 <i class="fas fa-star text-primary"></i>
                                 <i class="fas fa-star text-primary"></i>
                             </div>
-                            <p class="fs-5 m-0 pt-3">मौसम की मार से हर साल नुकसान होता था। लेकिन Krishimitra AI के मौसम अलर्ट और स्मार्ट खेती टिप्स से अब नुकसान कम और उत्पादन ज्यादा हो रहा है। ये प्लेटफॉर्म कमाल का है!</p>
+                            <p class="fs-5 m-0 pt-3">मेरे पास एक ट्रैक्टर था जो साल में सिर्फ कुछ महीनों के लिए ही काम आता था। बाकी समय यूं ही खड़ा रहता था। मैंने KrishiMitra AI के रेंटल सिस्टम के बारे में सुना और अपने ट्रैक्टर को किराए पर देने के लिए लिस्ट कर दिया। कुछ ही दिनों में मुझे एक किसान का कॉल आया, जिसने एक हफ्ते के लिए ट्रैक्टर बुक किया। इससे मुझे ₹10,000 की कमाई हुई! अब जब भी मेरा ट्रैक्टर खाली रहता है, मैं इसे किराए पर देकर अतिरिक्त आमदनी कमाता हूँ। इससे मेरा खेती का खर्च भी निकल आता है!</p>
                         </div>
                     </div>
                 </div>
@@ -860,7 +860,7 @@
                                 <i class="fas fa-star text-primary"></i>
                                 <i class="fas fa-star text-primary"></i>
                             </div>
-                            <p class="fs-5 m-0 pt-3">पहले खाद और बीज के दाम बहुत ज्यादा थे, लेकिन Krishimitra AI पर जुड़ने के बाद मुझे सस्ते और अच्छे विकल्प मिले। अब खेती की लागत 30% कम हो गई है। धन्यवाद!</p>
+                            <p class="fs-5 m-0 pt-3">हर साल मेरी टमाटर की फसल तैयार होती थी, लेकिन बाजार में बिचौलियों के कारण मुझे बहुत कम दाम मिलते थे। इस बार मैंने KrishiMitra AI पर अपना टमाटर सीधे होटल और उपभोक्ताओं को बेचने के लिए लिस्ट किया। पहले दिन ही मुझे एक होटल से बड़ा ऑर्डर मिला, और मैंने टमाटर ₹28 प्रति किलो के हिसाब से बेचा, जबकि बाजार में बिचौलिए सिर्फ ₹12 दे रहे थे। अब मुझे सही दाम भी मिल रहा है और मेरा माल भी तेजी से बिक रहा है। KrishiMitra AI ने मेरी कमाई को दोगुना कर दिया!</p>
                         </div>
                     </div>
                     <div class="testimonial-item rounded bg-light">
@@ -882,7 +882,7 @@
                                 <i class="fas fa-star text-primary"></i>
                                 <i class="fas fa-star text-primary"></i>
                             </div>
-                            <p class="fs-5 m-0 pt-3">मौसम की मार से हर साल नुकसान होता था। लेकिन Krishimitra AI के मौसम अलर्ट और स्मार्ट खेती टिप्स से अब नुकसान कम और उत्पादन ज्यादा हो रहा है। ये प्लेटफॉर्म कमाल का है!</p>
+                            <p class="fs-5 m-0 pt-3">मेरे पास एक ट्रैक्टर था जो साल में सिर्फ कुछ महीनों के लिए ही काम आता था। बाकी समय यूं ही खड़ा रहता था। मैंने KrishiMitra AI के रेंटल सिस्टम के बारे में सुना और अपने ट्रैक्टर को किराए पर देने के लिए लिस्ट कर दिया। कुछ ही दिनों में मुझे एक किसान का कॉल आया, जिसने एक हफ्ते के लिए ट्रैक्टर बुक किया। इससे मुझे ₹10,000 की कमाई हुई! अब जब भी मेरा ट्रैक्टर खाली रहता है, मैं इसे किराए पर देकर अतिरिक्त आमदनी कमाता हूँ। इससे मेरा खेती का खर्च भी निकल आता है!</p>
                         </div>
                     </div>
                     <div class="testimonial-item rounded bg-light">
@@ -904,7 +904,7 @@
                                 <i class="fas fa-star text-primary"></i>
                                 <i class="fas fa-star text-primary"></i>
                             </div>
-                            <p class="fs-5 m-0 pt-3">पहले जैविक खेती के लिए सही खाद और जानकारी मिलना मुश्किल था। Krishimitra AI से न सिर्फ बेहतरीन ऑर्गेनिक फर्टिलाइज़र मिले, बल्कि एक्सपर्ट्स की मदद से खेती और फायदेमंद हो गई। अल्हमदुलिल्लाह, बहुत अच्छा प्लेटफॉर्म</p>
+                            <p class="fs-5 m-0 pt-3">मुझे मेरी धान की फसल में कीटों की समस्या हो रही थी। मैंने KrishiMitra AI के एक्सपर्ट फोरम पर सवाल पूछा – ‘धान की फसल में कीटों से बचाव के लिए कौन सी दवा सबसे अच्छी रहेगी?’ कुछ ही मिनटों में एक कृषि विशेषज्ञ ने विस्तार से जवाब दिया, साथ ही AI चैटबॉट ने भी सटीक जानकारी दी। मैंने बताई गई दवा का उपयोग किया, और मेरी फसल को बचाने में मदद मिली। पहली बार ऐसा लगा कि कोई मेरी परेशानियों को समझता है और तुरंत समाधान देता है!</p>
                         </div>
                     </div>
                     <div class="testimonial-item rounded bg-light">
@@ -926,7 +926,7 @@
                                 <i class="fas fa-star text-primary"></i>
                                 <i class="fas fa-star text-primary"></i>
                             </div>
-                            <p class="fs-5 m-0 pt-3">मौसम की मार से हर साल नुकसान होता था। लेकिन Krishimitra AI के मौसम अलर्ट और स्मार्ट खेती टिप्स से अब नुकसान कम और उत्पादन ज्यादा हो रहा है। ये प्लेटफॉर्म कमाल का है!</p>
+                            <p class="fs-5 m-0 pt-3">हर साल मेरी टमाटर की फसल तैयार होती थी, लेकिन बाजार में बिचौलियों के कारण मुझे बहुत कम दाम मिलते थे। इस बार मैंने KrishiMitra AI पर अपना टमाटर सीधे होटल और उपभोक्ताओं को बेचने के लिए लिस्ट किया। पहले दिन ही मुझे एक होटल से बड़ा ऑर्डर मिला, और मैंने टमाटर ₹28 प्रति किलो के हिसाब से बेचा, जबकि बाजार में बिचौलिए सिर्फ ₹12 दे रहे थे। अब मुझे सही दाम भी मिल रहा है और मेरा माल भी तेजी से बिक रहा है। KrishiMitra AI ने मेरी कमाई को दोगुना कर दिया!</p>
                         </div>
                     </div>
                 </div>
