--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 wow bounceInUp" data-wow-delay="0.5s">
                         <div class="team-item rounded">
-                            <img class="img-fluid rounded-top " src="img/team-3.png" alt="">
+                            <img class="img-fluid rounded-top " src="img/1000190672.jpg" alt="">
                             <div class="team-content text-center py-3 bg-dark rounded-bottom">
                                 <h4 class="text-primary">Ayan Memon</h4>
                                 <p class="text-white mb-0">Team Member</p>
@@ -724,7 +724,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 wow bounceInUp" data-wow-delay="0.7s">
                         <div class="team-item rounded">
-                            <img class="img-fluid rounded-top " src="img/team-4.png" alt="">
+                            <img class="img-fluid rounded-top " src="img/WhatsApp Image 2025-03-05 at 15.16.32_49821f5e.jpg" alt="">
                             <div class="team-content text-center py-3 bg-dark rounded-bottom">
                                 <h4 class="text-primary">Yashwant Patil</h4>
                                 <p class="text-white mb-0">Team Member</p>
